Design: "추가 main 영역 스타일"
- video 삽입

--- a/style/init/init.css
+++ b/style/init/init.css
@@ -106,6 +106,6 @@ i {
 }
 
 body {
-  font-family: "Nanum Myeongjo", serif;
+  font-family: var(--font-family);
   color: var(--main-color-black);
 }
