--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,4 @@
-@import url("./common.css");
-@import url("./init.css");
-@import url("./header.css");
+@import url("./init/common.css");
+@import url("./init/init.css");
+@import url("./components/header.css");
+@import url("./components/contents.css");
