Design: "추가 about 섹션 영역 스타일"
- 마우스 hover, focus 애니메이션 추가

--- a/style/components/contents.css
+++ b/style/components/contents.css
@@ -2,13 +2,13 @@
   background: var(--main-color-white);
 }
 
-.section_wrap .visual {
+.section_wrap .section--visual {
   position: relative;
   width: 100vw;
   height: 100vh;
 }
 
-.section_wrap .visual .waves {
+.section_wrap .section--visual .waves {
   position: absolute;
   top: 0;
   left: 0;
@@ -17,7 +17,7 @@
   object-fit: cover;
 }
 
-.section_wrap .visual .title {
+.section_wrap .section--visual .title {
   position: absolute;
   left: 0;
   top: 50%;
@@ -28,4 +28,54 @@
   font-size: 7rem;
   font-family: var(--font-family-montserrat);
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+section.section--about {
+  padding: 10rem 0;
+  background: var(--main-color-background);
+}
+
+section.section--about .section-about-inner_wrap {
+  width: 1400px;
+  margin: 0 auto;
+}
+
+section.section--about .section-about-inner_wrap .text_wrap {
+}
+
+section.section--about .section-about-inner_wrap .text_wrap .title {
+  font-family: var(--font-family-montserrat);
+  font-size: 1.5rem;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+section.section--about .section-about-inner_wrap .text_wrap p {
+  font-size: 4.5rem;
+  line-height: 1.2;
+  margin: 4rem 0;
+}
+
+section.section--about .section-about-inner_wrap .text_wrap a {
+  display: inline-block;
+  padding: 0.5rem 1.5rem;
+  font-size: 1.2rem;
+  font-weight: bold;
+  font-family: var(--font-family-montserrat);
+  letter-spacing: 1px;
+  border: 1px solid var(--main-color-black);
+  border-radius: 20px;
+  text-transform: uppercase;
+  transition: all 0.2s;
+}
+
+section.section--about .section-about-inner_wrap .text_wrap a:hover,
+section.section--about .section-about-inner_wrap .text_wrap a:focus {
+  border: 1px solid transparent;
+  border-bottom: 1px solid var(--main-color-black);
+  border-radius: 0;
+  padding: 0.5rem 1.8rem;
+  transition: all 0.2s;
+  background: var(--main-color-background);
 }
