--- a/style/init/common.css
+++ b/style/init/common.css
@@ -1,7 +1,9 @@
 :root {
   --main-color-black: #333;
   --main-color-white: #fff;
+  --main-color-background: #f2f0eb;
   --font-family-myeongjo: "Nanum Myeongjo", serif;
   --font-family-montserrat: "Montserrat", sans-serif;
+  --font-family-georgian: "Noto Serif Georgian", sans-serif;
   font-size: 10px;
 }
