--- a/style/init/init.css
+++ b/style/init/init.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&family=Nanum+Myeongjo&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&family=Nanum+Myeongjo&family=Noto+Serif+Georgian:wght@300&display=swap");
 
 /* reset */
 
@@ -106,6 +106,6 @@ i {
 }
 
 body {
-  font-family: var(--font-family);
+  font-family: var(--font-family-montserrat);
   color: var(--main-color-black);
 }
