Design: "Feat 추가 approach 섹션 스타일"
- 요소의 중복 스타일 common.css 로 수정

--- a/style/init/common.css
+++ b/style/init/common.css
@@ -7,3 +7,45 @@
   --font-family-georgian: "Noto Serif Georgian", sans-serif;
   font-size: 10px;
 }
+
+div[class*="inner_wrap"] {
+  width: 140rem;
+  margin: 0 auto;
+}
+
+.text_wrap .title {
+  font-size: 1.5rem;
+  font-family: var(--font-family-montserrat);
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.text_wrap p {
+  font-size: 4rem;
+  line-height: 1.2;
+  margin: 4rem 0;
+}
+
+.text_wrap a {
+  display: inline-block;
+  padding: 0.5rem 1.5rem;
+  font-size: 1.2rem;
+  font-weight: bold;
+  font-family: var(--font-family-montserrat);
+  letter-spacing: 1px;
+  border: 1px solid var(--main-color-black);
+  border-radius: 20px;
+  text-transform: uppercase;
+  transition: all 0.2s;
+}
+
+.text_wrap a:hover,
+.text_wrap a:focus {
+  border: 1px solid transparent;
+  border-bottom: 1px solid var(--main-color-black);
+  border-radius: 0;
+  padding: 0.5rem 1.8rem;
+  transition: all 0.2s;
+  background: var(--main-color-background);
+}
