--- a/style/components/contents.css
+++ b/style/components/contents.css
@@ -27,55 +27,76 @@
   color: var(--main-color-white);
   font-size: 7rem;
   font-family: var(--font-family-montserrat);
+  font-weight: bold;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
+
+/* section--about */
 
 section.section--about {
   padding: 10rem 0;
   background: var(--main-color-background);
 }
 
-section.section--about .section-about-inner_wrap {
-  width: 1400px;
-  margin: 0 auto;
-}
-
-section.section--about .section-about-inner_wrap .text_wrap {
-}
-
-section.section--about .section-about-inner_wrap .text_wrap .title {
-  font-family: var(--font-family-montserrat);
-  font-size: 1.5rem;
-  font-weight: bold;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-}
-
 section.section--about .section-about-inner_wrap .text_wrap p {
   font-size: 4.5rem;
-  line-height: 1.2;
-  margin: 4rem 0;
 }
 
-section.section--about .section-about-inner_wrap .text_wrap a {
-  display: inline-block;
-  padding: 0.5rem 1.5rem;
-  font-size: 1.2rem;
-  font-weight: bold;
-  font-family: var(--font-family-montserrat);
-  letter-spacing: 1px;
-  border: 1px solid var(--main-color-black);
-  border-radius: 20px;
-  text-transform: uppercase;
-  transition: all 0.2s;
+/* section--approach */
+
+section.section--approach {
+  padding: 10rem 0;
 }
 
-section.section--about .section-about-inner_wrap .text_wrap a:hover,
-section.section--about .section-about-inner_wrap .text_wrap a:focus {
-  border: 1px solid transparent;
-  border-bottom: 1px solid var(--main-color-black);
-  border-radius: 0;
-  padding: 0.5rem 1.8rem;
-  transition: all 0.2s;
-  background: var(--main-color-background);
+section.section--approach .section-approach-inner_wrap {
+  position: relative;
+}
+
+section.section--approach .section-approach-inner_wrap .list {
+  width: 48%;
+}
+
+section.section--approach .section-approach-inner_wrap .list li {
+  margin-bottom: 3rem;
+}
+
+section.section--approach .section-approach-inner_wrap .list li:last-child {
+  margin-bottom: 0;
+}
+
+section.section--approach .section-approach-inner_wrap .list li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+section.section--approach .section-approach-inner_wrap .list li a img {
+  width: 100%;
+}
+
+section.section--approach .section-approach-inner_wrap .textwrap-fixed {
+  position: absolute;
+  width: 45%;
+  height: 100%;
+  top: 0;
+  right: 0;
+}
+
+section.section--approach
+  .section-approach-inner_wrap
+  .textwrap-fixed
+  .text_wrap {
+  position: absolute;
+  bottom: 10%;
+}
+
+section.section--approach
+  .section-approach-inner_wrap
+  .textwrap-fixed
+  .text_wrap.is-active {
+  position: fixed;
+  bottom: 50%;
+  transform: translateY(50%);
 }
