--- a/style/init/init.css
+++ b/style/init/init.css
@@ -106,6 +106,6 @@ i {
 }
 
 body {
-  font-family: var(--font-family-montserrat);
+  font-family: var(--font-family-myeongjo);
   color: var(--main-color-black);
 }
