--- a/style/components/contents.css
+++ b/style/components/contents.css
@@ -185,3 +185,72 @@ section.section--service .section--service-inner_wrap .text_wrap {
   float: right;
   width: 45%;
 }
+
+/* section--journal */
+
+section.section--journal {
+  padding: 35rem 0;
+  margin-top: -25rem;
+  background: var(--main-color-background);
+}
+
+section.section--journal .section--journal-inner_wrap {
+  overflow: hidden;
+}
+
+section.section--journal .section--journal-inner_wrap h2 {
+  margin-bottom: 10rem;
+  font-size: 4rem;
+  font-weight: bold;
+  font-family: var(--font-family-montserrat);
+  letter-spacing: 1px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+section.section--journal .section--journal-inner_wrap .list {
+  display: flex;
+  justify-content: space-between;
+}
+
+section.section--journal .section--journal-inner_wrap .list li {
+  width: 33rem;
+}
+
+section.section--journal .section--journal-inner_wrap .list a {
+  display: block;
+}
+
+section.section--journal .section--journal-inner_wrap .list a .image_wrap {
+  position: relative;
+  height: 33rem;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+section.section--journal .section--journal-inner_wrap .list a .image_wrap img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: auto;
+  height: 100%;
+  transform: translate(-50%, -50%);
+  padding: 0 1rem 1rem 0;
+}
+
+section.section--journal .section--journal-inner_wrap .list a h3 {
+  margin: 3rem 0;
+  font-size: 1.5rem;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+section.section--journal .section--journal-inner_wrap .list a p {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  font-size: 1.6rem;
+  line-height: 1.4;
+  text-align: justify;
+  overflow: hidden;
+}
