Design: "추가 footer 스타일"
- footer 노출 효과를 위한 section_wrap 의 position 수정
- section_wrap 의 margin 겹침 문제 해결

--- a/style/init/common.css
+++ b/style/init/common.css
@@ -1,11 +1,16 @@
 :root {
   --main-color-black: #333;
   --main-color-white: #fff;
+  --main-color-navy: #213135;
   --main-color-background: #f2f0eb;
   --font-family-myeongjo: "Nanum Myeongjo", serif;
   --font-family-montserrat: "Montserrat", sans-serif;
   --font-family-georgian: "Noto Serif Georgian", sans-serif;
   font-size: 10px;
+}
+
+main {
+  width: 100%;
 }
 
 div[class*="inner_wrap"] {
