--- a/style/components/contents.css
+++ b/style/components/contents.css
@@ -1,5 +1,10 @@
 .section_wrap {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  margin-bottom: 20rem;
   background: var(--main-color-white);
+  z-index: 5;
 }
 
 .section_wrap .section--visual {
@@ -12,8 +17,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
