--- a/style/init/init.css
+++ b/style/init/init.css
@@ -5,6 +5,7 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 html,
@@ -105,7 +106,14 @@ i {
   font-style: normal;
 }
 
+html {
+  width: 100vw;
+  height: 100vh;
+}
+
 body {
+  width: 100%;
   font-family: var(--font-family-myeongjo);
   color: var(--main-color-black);
+  overflow-x: hidden;
 }
