--- a/style/main.css
+++ b/style/main.css
@@ -2,3 +2,4 @@
 @import url("./init/init.css");
 @import url("./components/header.css");
 @import url("./components/contents.css");
+@import url("./components/footer.css");
