--- a/style/main.css
+++ b/style/main.css
@@ -3,3 +3,5 @@
 @import url("./components/header.css");
 @import url("./components/contents.css");
 @import url("./components/footer.css");
+@import url("./motion/contents.css");
+@import url("./motion/header.css");
