Feat: "추가 jQuery, jQuery plugins"
- scrolla 플러그인 설치
- splitting 플러그인 설치
- scrolla 를 이용한 이미지 애니메이션 추가
- splitting 을 이용한 텍스트 애니메이션 추가

--- a/style/main.css
+++ b/style/main.css
@@ -5,3 +5,4 @@
 @import url("./components/footer.css");
 @import url("./motion/contents.css");
 @import url("./motion/header.css");
+@import url("./animation/animation.css");
