--- a/style/components/header.css
+++ b/style/components/header.css
@@ -18,19 +18,19 @@ header {
   transition: all 0.5s;
 }
 
-header nav .nav-inner_wrap {
+header .header-inner_wrap {
   width: 90%;
   margin: 0 auto;
 }
 
-header nav .nav-inner_wrap .logo {
+header .header-inner_wrap .logo {
   display: inline-block;
   font-size: 2.5rem;
   letter-spacing: 1px;
   transition: all 0.5s;
 }
 
-header nav .nav-inner_wrap .gnb-button {
+header .header-inner_wrap .gnb-button {
   display: block;
   position: relative;
   float: left;
@@ -40,7 +40,7 @@ header nav .nav-inner_wrap .gnb-button {
   transition: all 0.5s;
 }
 
-header nav .nav-inner_wrap .gnb-button span {
+header .header-inner_wrap .gnb-button span {
   display: block;
   position: absolute;
   left: 0;
@@ -49,18 +49,57 @@ header nav .nav-inner_wrap .gnb-button span {
   background: #fff;
 }
 
-header nav .nav-inner_wrap .gnb-button span.a {
+header .header-inner_wrap .gnb-button span.a {
   top: 0;
 }
 
-header nav .nav-inner_wrap .gnb-button span.b {
+header .header-inner_wrap .gnb-button span.b {
   bottom: 0;
 }
 
-header nav .nav-inner_wrap .contact {
+header .header-inner_wrap .contact {
   display: block;
   float: right;
   margin-top: 1rem;
   font-size: 1.4rem;
   transition: all 0.5s;
+}
+
+/* gnb menu */
+
+.nav {
+  position: absolute;
+  top: 0;
+  left: -100rem;
+  width: 0;
+  height: 100vh;
+  padding: 9.5rem 5rem;
+  text-align: left;
+  transition: all 0.7s;
+  background: black;
+  color: var(--main-color-white);
+  overflow: hidden;
+}
+
+.nav .gnb-menu {
+  position: absolute;
+  width: 60%;
+  top: 50%;
+  left: 50%;
+  padding: 2rem 0;
+  border-top: 1px solid #555;
+  border-bottom: 1px solid #555;
+  transform: translate(-50%, -50%);
+}
+
+.nav .gnb-menu li a {
+  line-height: 5rem;
+  font-size: 2.2rem;
+}
+
+.nav .gnb-menu a span {
+  font-size: 2rem;
+  font-family: var(--font-family-myeongjo);
+  font-style: italic;
+  text-transform: none;
 }
