--- a/style/main.css
+++ b/style/main.css
@@ -6,3 +6,4 @@
 @import url("./motion/contents.css");
 @import url("./motion/header.css");
 @import url("./animation/animation.css");
+@import url("./responsive/responsive.css");
