--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,19 @@
+html {
+  width: 100vw;
+  height: 100vh;
+}
+
+body {
+  width: 100%;
+  font-family: var(--font-family-myeongjo);
+  color: var(--main-color-black);
+  overflow-x: hidden;
+}
+
+a {
+  cursor: pointer;
+}
+
 :root {
   --main-color-black: #333;
   --main-color-white: #fff;
